--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_login2">LoginActivity2</string>
+    <string name="account">Konto</string>
+    <string name="search">Szukaj</string>
+    <string name="favourites">Ulubione</string>
 
 </resources>
