--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="account">Konto</string>
     <string name="search">Szukaj</string>
     <string name="favourites">Ulubione</string>
+    <string name="search2">Wyszukaj</string>
 
 </resources>
