--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="warn_you">Radzi uważać</string>
     <string name="you_are_buying">Kupujesz</string>
     <string name="you_are_selling">Sprzedajesz</string>
+    <string name="your_concerts">Twoje koncerty</string>
 
 </resources>
