--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,9 @@
     <string name="recommend_with_colon">Poleca:</string>
     <string name="warn_with_color">Ostrzega:</string>
     <string name="friends_on_facebook">Znajomi na Facebook: %1$d</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="this_weekend">W ten weekend</string>
+    <string name="in_your_city">W twoim mieście</string>
+    <string name="discover">Odkrywaj</string>
     <string name="no_offers">Brak ofert</string>
     <string name="write_something">Napisz coś...</string>
     <string name="week">tyg.</string>
